--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
+@layer base {
+  body {
+    @apply bg-white text-black transition-colors duration-300 ease-in-out;
+  }
+  .dark body {
+    @apply bg-black text-white;
+  }
+}
+
+@layer components {
   .nav-item {
-    @apply  px-4 py-1 text-white/70 text-sm font-semibold rounded-full hover:bg-white/10 hover:text-white
+    @apply px-4 py-2 rounded-full text-sm font-medium text-gray-700 hover:text-white hover:bg-gray-500 transition duration-200;
+  }
+  .dark .nav-item {
+    @apply text-gray-300 hover:text-white hover:bg-gray-700;
   }
 }
