--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,9 @@
   .dark body {
     @apply bg-black text-white;
   }
+  .hero-ring {
+  @apply absolute inset-0  border-2 top-1/2  left-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full border-emerald-300/5 shadow-[0_0_80px_inset] shadow-emerald-300/5
+  }
 }
 
 @layer components {
@@ -19,3 +22,4 @@
     @apply text-gray-300 hover:text-white hover:bg-gray-700;
   }
 }
+
