--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
     @apply bg-black text-white;
   }
   .hero-ring {
-  @apply absolute inset-0  border-2 top-1/2  left-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full border-emerald-300/5 shadow-[0_0_80px_inset] shadow-emerald-300/5
+  @apply absolute border-indigo-600/5 shadow-indigo-500 inset-0  border-2 top-1/2  left-1/2 -translate-x-1/2  -translate-y-1/2 rounded-full dark:border-emerald-300/5 shadow-[0_0_80px_inset] dark:shadow-emerald-300/5
   }
 }
 
