--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,13 +10,13 @@
     @apply bg-black text-white;
   }
   .hero-ring {
-  @apply absolute border-gray-200 shadow-gray-300 inset-0  border-2 top-1/2  left-1/2 -translate-x-1/2  -translate-y-1/2 rounded-full dark:border-emerald-300/5 shadow-[0_0_80px_inset] dark:shadow-emerald-300/5
+  @apply absolute border-gray-300 shadow-gray-400 inset-0 border-0 dark:border-2  top-1/2  left-1/2 -translate-x-1/2  -translate-y-1/2 rounded-full dark:border-emerald-300/5 shadow-[0_0_80px_inset] dark:shadow-emerald-300/5
   }
 }
 
 @layer components {
   .nav-item {
-    @apply px-4 py-2 rounded-full text-sm font-medium text-gray-700 hover:text-white hover:bg-gray-500 transition duration-200;
+    @apply px-4 py-2 rounded-full -z-50 text-sm font-medium text-gray-700 hover:text-white hover:bg-gray-500 transition duration-200;
   }
   .dark .nav-item {
     @apply text-gray-300 hover:text-white hover:bg-gray-700;
